[gd_scene load_steps=6 format=3 uid="uid://ctnn77jc27yix"]

[ext_resource type="Script" path="res://PapersPleaseClone/Scripts/miniGameMenu.gd" id="1_sxnux"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lo4hs"]
bg_color = Color(0.0980392, 0.686275, 0.498039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5a0mv"]
bg_color = Color(0, 0.505882, 0.533333, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.780392, 0.792157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_653rm"]
bg_color = Color(0, 0.505882, 0.533333, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3uiis"]
bg_color = Color(0, 0.505882, 0.533333, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxnux")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 512.0
offset_bottom = 288.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lo4hs")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 64.0
offset_right = 336.0
offset_bottom = 104.0
theme_override_styles/normal = SubResource("StyleBoxFlat_5a0mv")
theme_override_styles/hover = SubResource("StyleBoxFlat_653rm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3uiis")
text = "Tutorial"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 128.0
offset_right = 336.0
offset_bottom = 168.0
theme_override_styles/normal = SubResource("StyleBoxFlat_5a0mv")
theme_override_styles/hover = SubResource("StyleBoxFlat_653rm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3uiis")
text = "Kit de Vestes"

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 192.0
offset_right = 336.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_5a0mv")
theme_override_styles/hover = SubResource("StyleBoxFlat_653rm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3uiis")
text = "Kit de Equipamentos"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_button_3_pressed"]
